syntax = "proto3";

package mashuk22.telegrammanager.user_service.v3;
option go_package = "pkg/user-service";


service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
    int64 id = 1;
    int64 chat_id = 2;
    string username = 3;
    string first_name = 4;
    string last_name = 5;
    int64 role_id = 6;
    bool is_subscribed = 7;
    string created_at = 8;
    string updated_at = 9;
}

message CreateUserRequest {
    int64 chat_id = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
    int64 role_id = 5;
    bool is_subscribed = 6;
}

message CreateUserResponse {
    int64 id = 1;
    int64 chat_id = 2;
    string username = 3;
    string first_name = 4;
    string last_name = 5;
    int64 role_id = 6;
    bool is_subscribed = 7;
    string created_at = 8;
    string updated_at = 9;
}

message ListUsersRequest {

}

message ListUsersResponse {
    repeated User user = 1;
}

message DeleteUserRequest {
    int64 id = 1;
}

message DeleteUserResponse {
    
}